# libgsmc

./: .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.autoconf  Makefile.in  NEWS  README  configure  configure.in
doc/: ClassIndex.html  FileIndex.html  FunctionIndex.html  GeneralIndex.html  gsmc-h.html  index.html
doc/ndinfo/: Menu.txt
doc/ndinfo/Data/: ClassHierarchy.nd  FileInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
examples/: Makefile.am  Makefile.in  README
examples/cli/: Makefile.am  Makefile.in  README  phone_cli.c
examples/gsm_emulator/: Makefile.am  Makefile.in  README  gsm_emulator.c
examples/qt/: README
src/: Makefile.am  Makefile.in  README  etsi707.c  etsi707.h  generic.c  gsmc.c  gsmc.h  lgdebug.c  lgdebug.h  sil.c  telit.c  term.c  term.h
testsuite/: Makefile.am  README
testsuite/basic/: basic001.exp
testsuite/config/: gsmtest.exp  unix.exp
testsuite/section8/: cfun001.exp  cpin001.exp
