AC_INIT(libgsmc, 0.2.0)
AC_CONFIG_AUX_DIR(scripts)
AM_INIT_AUTOMAKE(libgsmc, 0.2.0)
AM_CONFIG_HEADER(config.h)
AC_PROG_INSTALL
CFLAGS=
AC_PROG_CC
AC_LANG_C
AC_PROG_MAKE_SET
AC_HEADER_STDC

AC_PROG_LIBTOOL
AM_INIT_AUTOMAKE
AC_OUTPUT(Makefile 
	src/Makefile 
	examples/Makefile 
	examples/cli/Makefile
	examples/gsm_emulator/Makefile
)

dnl run configure scripts in the subdirs: AC_CONFIG_SRCDIR(src)
