## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS	= gnu
lib_LTLIBRARIES 	= libgsmc.la
MAINTAINERCLEANFILES    = Makefile.in

libgsmc_la_SOURCES 	= gsmc.c term.c etsi707.c generic.c lgdebug.c telit.c sil.c
LTLIBOBJS	 	= gsmc.o term.o etsi707.o generic.o lgdebug.o telit.o sil.o
